cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(keypoints_test)
find_package(PCL 1.7.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(example_get_keypoints_indices example_get_keypoints_indices.cpp)
target_link_libraries(example_get_keypoints_indices ${PCL_LIBRARIES})
